--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <script src="%PUBLIC_URL%/config.js"></script>
     <title>Armory</title>
   </head>
   <body>
