--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/govicons@latest/css/govicons.min.css"
+    />
     <script src="%PUBLIC_URL%/config.js"></script>
     <title>Armory</title>
   </head>
